# CodingTools4

./: PROJECT.md  README.md  pyproject.toml
src/CodingTools4/: __init__.py
src/CodingTools4/BasicStructure/: Inheritance.py  __init__.py
src/CodingTools4/Error/: BasicStructure.py  Import.py  Runtime.py  __init__.py
tests/: __init__.py
tests/Error/: ErrorBasicStructure.py  ErrorImport.py  ErrorRuntime.py
