[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'CodingTools4'
version = '0.0.0'
description = 'This library can assist with your projects.'

readme = 'README.md'
license = {file='LICENSE'}

requires-python = '>=3.13'
dependencies = [
]

authors = [
   {name='AtoKashinoki', email='atokashinoki@gmail.com'}
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: Jamanese',
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3.9',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
   'Programming Language :: Python :: 3.13',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development :: Libraries :: Python Modules',
   'Topic :: Utilities',
]


[project.urls]
'Homepage' = 'https://github.com/AtoKashinoki/CodingToolsU3-Discard'
'Bug Traker' = 'https://github.com/AtoKashinoki/CodingToolsU3-Discard/issues'
'Documentation' = 'https://github.com/AtoKashinoki/CodingToolsU3-Discard'
'Source' = 'https://github.com/AtoKashinoki/CodingToolsU3-Discard.git'


[project.scripts]
