[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'CodingTools4[Error]'
version = '1.0.0'
description = 'This library provides several modules to facilitate Python development.'

readme = 'README.md'
license = {file='LICENSE'}

requires-python = '>=3.13'
dependencies = [
]

authors = [
   {name='AtoKashinoki', email='atokashinoki@gmail.com'}
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: Jamanese',
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3.9',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
   'Programming Language :: Python :: 3.13',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development :: Libraries :: Python Modules',
   'Topic :: Utilities',
]


[project.urls]
'Homepage' = 'https://github.com/AtoKashinoki/CodingTools4'
'Bug Traker' = 'https://github.com/AtoKashinoki/CodingTools4/issues'
'Documentation' = 'https://github.com/AtoKashinoki/CodingTool4'
'Source' = 'https://github.com/AtoKashinoki/CodingTools4.git'


[project.scripts]
